# kodo

./: CMakeLists.txt  example.kd  example.lang
.github/workflows/: test.yaml
compiler/: Analyser.cc  Analyser.hh  Ast.cc  Ast.hh  CMakeLists.txt  CharStream.cc  CharStream.hh  CodeGen.cc  CodeGen.hh  Compiler.cc  Compiler.hh  ConcreteImplementer.cc  ConcreteImplementer.hh  Config.hh.in  Error.hh  IrGen.cc  IrGen.hh  LLVMGen.cc  LLVMGen.hh  Lexer.cc  Lexer.hh  Parser.cc  Parser.hh  Stack.hh  StackPromoter.cc  StackPromoter.hh  Token.cc  Token.hh  Type.cc  Type.hh  TypeChecker.cc  TypeChecker.hh  VarChecker.cc  VarChecker.hh  main.cc
compiler/analyses/: ControlFlowAnalysis.cc  ControlFlowAnalysis.hh  ReachingDefAnalysis.cc  ReachingDefAnalysis.hh
compiler/ast/: Dumper.cc  Dumper.hh  Node.hh  Nodes.cc  Nodes.hh  Type.cc  Type.hh  Visitor.hh
compiler/graph/: DepthFirstSearch.hh  DominanceComputer.hh  DominatorTree.hh  Graph.hh
compiler/ir/: BasicBlock.cc  BasicBlock.hh  Constant.hh  Constants.cc  Constants.hh  Dumper.cc  Dumper.hh  Function.cc  Function.hh  GlobalVariable.cc  GlobalVariable.hh  Instruction.cc  Instruction.hh  Instructions.cc  Instructions.hh  Program.cc  Program.hh  Prototype.cc  Prototype.hh  Type.cc  Type.hh  TypeCache.cc  TypeCache.hh  Types.cc  Types.hh  Value.cc  Value.hh  Visitor.hh
compiler/pass/: Pass.hh  PassManager.cc  PassManager.hh  PassResult.hh  PassUsage.hh
compiler/support/: ArgsParser.cc  ArgsParser.hh  Assert.cc  Box.hh  Castable.hh  Error.cc  Error.hh  HasKind.hh  List.hh  ListNode.hh  PairHash.hh  Stack.hh
std/: io.kd  start.kd  start.lang  syscall.kd  syscall.lang
tests/: CMakeLists.txt  bad_if.lang  bad_mutability.lang  comparison.lang  complex_expression.lang  hello_world.lang  implicit_extension.lang  libc_hi.lang  malloc.lang  mutability.lang  run_tests.bash  simple_if.lang  type_errors.lang  unknown_symbols.lang  unused_var.lang  use_before_init.lang
tests/compile-error/: bad_if.kd  bad_if.lang  bad_mutability.kd  bad_mutability.lang  bad_pointer_mutability.kd  bad_pointer_mutability.lang  type_errors.kd  type_errors.lang  unimplemented_trait_function.kd  unknown_symbols.lang  use_before_init.kd  use_before_init.lang
tests/success/: basic_struct.lang  basic_trait.kd  comparison.lang  complex_expression.kd  complex_expression.lang  complex_struct.kd  complex_struct.lang  const_decl.kd  hello_world.lang  implicit_extension.kd  implicit_extension.lang  inline_asm.kd  inline_asm.lang  instance_member_function.kd  libc_hi.lang  malloc.kd  malloc.lang  mutability.kd  mutability.lang  pointer_mutability.lang  simple_if.lang  static_member_function.kd  type_alias.kd  type_alias.lang
